--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ theme: jekyll-theme-THEME-NAME
           <input type="text" id="username" name="username" placeholder="Username">
         </div>
         <div class="input-container">
-          <input type="password" id="password" name="password" placeholder="Password">
+          <input type="togglepassword" id="password" name="password" placeholder="Password">
         </div>
         <div class="button-container">
           <button type="submit">Log In</button>
