--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ theme: jekyll-theme-THEME-NAME
           <input type="text" id="username" name="username" placeholder="Username">
         </div>
         <div class="input-container">
-          <i type="togglepassword" id="password" name="password" placeholder="Password" i>
+          <input type="password" id="password" name="password" placeholder="Password" >
+          <i class="fa-solid fa-eye" id="eye"></i>
         </div>
         <div class="button-container">
           <button type="submit">Log In</button>
